Actions
Bug #12598
closedssc050: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error on SPARC while building with NULL pointer:
../../sun4u/io/i2c/clients/ssc050.c: In function 'ssc050_ioctl': ../../sun4u/io/i2c/clients/ssc050.c:327: error: comparison between pointer and integer ../../sun4u/io/i2c/clients/ssc050.c: In function 'ssc050_do_attach': ../../sun4u/io/i2c/clients/ssc050.c:650: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun4u/io/i2c/clients/ssc050.c:501 ssc050_ioctl() warn: inconsistent indenting
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 67c3b220bd061b0e5e7bed36a8deff9f85b06440
commit 67c3b220bd061b0e5e7bed36a8deff9f85b06440 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-09T15:32:32.000Z 12598 ssc050: smatch and NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions