12598 ssc050: smatch and NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>